compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@sema__invalid_let_binding.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/sema/invalid_let_binding.test
input_file: compiler/eight-tests/tests/ui/sema/invalid_let_binding.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::invalid_reference

  × invalid reference to undefined
   ╭─[tests/ui/sema/invalid_let_binding.test:2:11]
 1 │ fn foo() {
 2 │   let k = undefined;
   ·           ────┬────
   ·               ╰── no value in scope named undefined
 3 │ }
   ╰────
